Fixed letter spacing

--- a/main.css
+++ b/main.css
@@ -37,6 +37,7 @@ h1, h2 {
     font-weight: 400;
     color: #4C4F56;
     text-align: center;
+    letter-spacing: 2px;
 }
 
 h1 {
@@ -71,6 +72,7 @@ nav a {
     font-weight: 400;
     line-height: 45px;
     color: #4C4F56;
+    letter-spacing: 2px;
 }
 
 li a {
@@ -98,6 +100,7 @@ h3 {
     font-weight: 400;
     line-height: 48px;
     color: #4C4F56;
+    letter-spacing: 2px;
 }
 
 p {
